Use common config map

--- a/property-service/PropertyDeployment.yml
+++ b/property-service/PropertyDeployment.yml
@@ -28,4 +28,4 @@ spec:
               containerPort: 8080
           envFrom:
             - configMapRef:
-                name: property-config
+                name: service-configmap
