move redis pw to secret

--- a/service-secret.yml
+++ b/service-secret.yml
@@ -5,3 +5,4 @@ metadata:
 type: Opaque
 data:
   order-service-secret-key: M2UwMjVlMTYtNGQ3OC0xMWVkLWJkYzMtMDI0MmFjMTIwMDAy
+  REDIS_PASSWORD: YVVRMFVubENSR3c1YUE9PQ==
