use commit commit config and secret

--- a/property-service/PropertyDeployment.yml
+++ b/property-service/PropertyDeployment.yml
@@ -29,3 +29,5 @@ spec:
           envFrom:
             - configMapRef:
                 name: service-configmap
+            - secretRef:
+                name: service-secret
