--- a/service-configmap.yml
+++ b/service-configmap.yml
@@ -25,7 +25,7 @@ data:
 
   DB_CONTACT_POINTS: cassandra-1-cassandra-svc
   DB_DATACENTER: datacenter1
-  DB_PORT: 9042
+  DB_PORT: "9042"
   DB_SCHEME_ACTION: create_if_not_exists
   DB_RESERVATION_KEYSPACE: reservation
   DB_PAYMENT_KEYSPACE: payment
@@ -39,4 +39,4 @@ data:
 
   SERVICE_PORT: "8080"
 
-  SPRING_ALLOW_BEAN_DEFINITION_OVERRIDING: true
+  SPRING_ALLOW_BEAN_DEFINITION_OVERRIDING: "true"
