--- a/service-secret.yml
+++ b/service-secret.yml
@@ -6,3 +6,4 @@ type: Opaque
 data:
   order-service-secret-key: M2UwMjVlMTYtNGQ3OC0xMWVkLWJkYzMtMDI0MmFjMTIwMDAy
   REDIS_PASSWORD: YVVRMFVubENSR3c1YUE9PQ==
+  JWT_SECRET: dG9wX3NlY3JldA==
