--- a/service-secret.yml
+++ b/service-secret.yml
@@ -5,5 +5,5 @@ metadata:
 type: Opaque
 data:
   order-service-secret-key: M2UwMjVlMTYtNGQ3OC0xMWVkLWJkYzMtMDI0MmFjMTIwMDAy
-  REDIS_PASSWORD: YVVRMFVubENSR3c1YUE9PQ==
+  REDIS_PASSWORD: aUQ0UnlCRGw5aA==
   JWT_SECRET: dG9wX3NlY3JldA==
