property-service: change to use LoadBalance

--- a/property-service/PropertyService.yml
+++ b/property-service/PropertyService.yml
@@ -4,11 +4,11 @@ kind: Service
 metadata:
   name: property-service
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: property
   ports:
     - protocol: TCP
-      port: 8000
+      port: 8080
       targetPort: 8080
       nodePort: 30008
