--- a/service-configmap.yml
+++ b/service-configmap.yml
@@ -49,4 +49,4 @@ data:
   ZIPKIN_PROPERTY_SERVICE: property-service
   ZIPKIN_RESERVATION_SERVICE: reservation-service
 
-  NOTIFICATION.MESSAGE.SEPARATOR: "<br/>"
+  NOTIFICATION_MESSAGE_SEPARATOR: "<br/>"
