--- a/property-service/PropertyService.yml
+++ b/property-service/PropertyService.yml
@@ -9,6 +9,6 @@ spec:
     app: property
   ports:
     - protocol: TCP
-      port: 8080
+      port: 80
       targetPort: 8080
-      nodePort: 30009
+#      nodePort: 30009
